[gd_scene load_steps=14 format=3 uid="uid://b32sp4pv8q26w"]

[ext_resource type="Script" path="res://Acte1_Foret/Scripts/Scenes/Map/grotte.gd" id="1_mgr3x"]
[ext_resource type="PackedScene" uid="uid://d4mjmnvdaiesv" path="res://Global/Scenes/projectilePlayer.tscn" id="2_fcobi"]
[ext_resource type="PackedScene" uid="uid://bubomporuqouu" path="res://Acte1_Foret/Scenes/TileSetMap/GrotteTileSetMap.tscn" id="2_qyjhe"]
[ext_resource type="PackedScene" uid="uid://biakeyhrdud76" path="res://Global/Scenes/Player.tscn" id="3_64wbj"]
[ext_resource type="Texture2D" uid="uid://cnnu6mrrdg6k8" path="res://Global/ImportImage/TileSet/Nature/2 Background/Background.png" id="4_miojh"]
[ext_resource type="PackedScene" uid="uid://ba7ng6saetiyp" path="res://Acte1_Foret/Scenes/Goulu/goulu.tscn" id="5_2wt4b"]
[ext_resource type="PackedScene" uid="uid://cijq7e6ndo1r3" path="res://Global/Scenes/UI/ui.tscn" id="6_fcncm"]
[ext_resource type="Script" path="res://Acte1_Foret/Scripts/Scenes/ObjectOfMap/destroyWay.gd" id="7_44rbl"]
[ext_resource type="Texture2D" uid="uid://cb3yok0u5f1wj" path="res://Global/ImportImage/TileSet/Nature/3 Objects/Boxes/4.png" id="8_le1mn"]
[ext_resource type="AudioStream" uid="uid://bmutftb4gl14k" path="res://Acte1_Foret/Audio/Octopath Traveler 2 - The Brightlands Night.mp3" id="9_nk1vq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q41lc"]
size = Vector2(46.6667, 41.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfpue"]
size = Vector2(20, 147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8tll4"]
size = Vector2(20, 147)

[node name="Grotte" type="Node2D"]
script = ExtResource("1_mgr3x")
projectile_scene = ExtResource("2_fcobi")

[node name="TileMap" parent="." instance=ExtResource("2_qyjhe")]

[node name="Player" parent="." instance=ExtResource("3_64wbj")]
position = Vector2(-819, -585)
scale = Vector2(0.1, 0.1)

[node name="Camera2D2" type="Camera2D" parent="Player"]
position = Vector2(0, -460)
zoom = Vector2(3.5, 3.5)

[node name="Background" type="Sprite2D" parent="Player"]
z_index = -4
position = Vector2(0, -500)
scale = Vector2(7, 7)
texture = ExtResource("4_miojh")

[node name="MusicAudio" type="AudioStreamPlayer2D" parent="Player"]
scale = Vector2(10, 10)
stream = ExtResource("9_nk1vq")
volume_db = 10.0
autoplay = true
parameters/looping = true

[node name="Goulu" parent="." instance=ExtResource("5_2wt4b")]
position = Vector2(1222, 17)
scale = Vector2(0.1, 0.1)
talkLines = Array[String](["Nextea !!! J'attend toujours ma tarte !", "Tu allais laisser Goulu mourrir de faim !!", "Mmh, t'es pas le bon Nextea, toi ?", "Peu importe, tu m'as promis une tarte !", "Ta machine à clonage marche...", "Mais moi et... les autres moi ont faim !", "Alors, tu viens à ma maison !", "La voie est bloquée, mais je sais que ce n'est pas un souci pour toi.", "Tu peux tirer des boules de feu.", "J'avoue que même moi, avec beaucoup de piments, je n'y arrive pas...", "Tu dégage le passage, et vient à ma tour, ", "On se revoit là-bas...", "Avec ma tarte, surtout !"])

[node name="NextLevel" type="Area2D" parent="."]
position = Vector2(1465, 191)
scale = Vector2(1.5, 1.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevel"]
position = Vector2(-1.33335, 26)
shape = SubResource("RectangleShape2D_q41lc")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1281, 0)
script = ExtResource("7_44rbl")

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CaisseBloquer" type="Node2D" parent="Area2D/StaticBody2D"]
position = Vector2(-1280, 0)

[node name="4" type="Sprite2D" parent="Area2D/StaticBody2D/CaisseBloquer"]
position = Vector2(1280, 7)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_le1mn")

[node name="5" type="Sprite2D" parent="Area2D/StaticBody2D/CaisseBloquer"]
position = Vector2(1280, -12)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_le1mn")

[node name="6" type="Sprite2D" parent="Area2D/StaticBody2D/CaisseBloquer"]
position = Vector2(1281.2, -30.6)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_le1mn")

[node name="7" type="Sprite2D" parent="Area2D/StaticBody2D/CaisseBloquer"]
position = Vector2(1281.2, -49.6)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_le1mn")

[node name="8" type="Sprite2D" parent="Area2D/StaticBody2D/CaisseBloquer"]
position = Vector2(1281.2, -63)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_le1mn")

[node name="9" type="Sprite2D" parent="Area2D/StaticBody2D/CaisseBloquer"]
position = Vector2(1281.2, -82)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_le1mn")

[node name="10" type="Sprite2D" parent="Area2D/StaticBody2D/CaisseBloquer"]
position = Vector2(1282.4, -100.6)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_le1mn")

[node name="11" type="Sprite2D" parent="Area2D/StaticBody2D/CaisseBloquer"]
position = Vector2(1282.4, -119.6)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_le1mn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2(0, -56.5)
shape = SubResource("RectangleShape2D_hfpue")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -56.5)
shape = SubResource("RectangleShape2D_8tll4")

[node name="Projectiles" type="Node2D" parent="."]
z_index = 4

[node name="UI" parent="." instance=ExtResource("6_fcncm")]

[connection signal="projectile" from="Player" to="." method="_on_player_projectile"]
[connection signal="projectileFlipDirection" from="Player" to="." method="_on_player_projectile_flip_direction"]
[connection signal="body_entered" from="NextLevel" to="." method="_on_next_level_body_entered"]
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
